// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CDK Express Pipeline CI Configuration snapshot all workflows for config 1`] = `
{
  "content": GithubWorkflow {
    "json": {
      "name": "CDK Express Pipeline Synth Action",
      "runs": {
        "steps": [
          {
            "name": "Checkout repo",
            "uses": "actions/checkout@v4",
          },
          {
            "name": "Set up node",
            "uses": "actions/setup-node@v4",
            "with": {
              "cache": "npm",
              "node-version": 20,
            },
          },
          {
            "name": "Install dependencies",
            "run": "npm ci",
            "shell": "bash",
          },
          {
            "name": "CDK synth dev",
            "run": "npm run cdk -- synth '**' -c env=dev --output=cdk.out/dev",
            "shell": "bash",
          },
          {
            "name": "CDK synth prod",
            "run": "npm run cdk -- synth '**' -c env=prod --output=cdk.out/prod",
            "shell": "bash",
          },
          {
            "name": "Cache Build",
            "uses": "actions/cache/save@v4",
            "with": {
              "key": "cache-build-\${{ github.sha }}",
              "path": "cdk.out/
node_modules/",
            },
          },
        ],
        "using": "composite",
      },
    },
  },
  "fileName": "actions/cdk-express-pipeline-synth/action.yml",
}
`;

exports[`CDK Express Pipeline CI Configuration snapshot all workflows for config 2`] = `
{
  "content": GithubWorkflow {
    "json": {
      "description": "Run CDK diff for a specific stack pattern and post results to PR",
      "inputs": {
        "assume-region": {
          "description": "The AWS region to assume for the deploy operation",
          "required": true,
        },
        "assume-role-arn": {
          "description": "The ARN of the role to assume for the deploy operation",
          "required": true,
        },
        "cloud-assembly-directory": {
          "description": "The directory where the CDK cloud assembly is located",
          "required": true,
        },
        "command": {
          "description": "CDK diff command",
          "required": true,
        },
        "comment-title": {
          "description": "Title for the diff comment",
          "required": true,
        },
        "github-token": {
          "description": "GitHub token for posting comments",
          "required": true,
        },
        "stack-selector-patterns": {
          "description": "The value of the {stackSelector} replacement in the command",
          "required": true,
        },
        "write-as-comment": {
          "description": "Whether to write the diff as a comment or do the command instead",
          "required": true,
        },
      },
      "name": "CDK Diff Action",
      "runs": {
        "steps": [
          {
            "name": "Restore Build Cache",
            "uses": "actions/cache/restore@v4",
            "with": {
              "key": "cache-build-\${{ github.sha }}",
              "path": "cdk.out/
node_modules/",
            },
          },
          {
            "name": "Configure AWS credentials",
            "uses": "aws-actions/configure-aws-credentials@v4",
            "with": {
              "aws-region": "\${{ inputs.assume-region }}",
              "role-to-assume": "\${{ inputs.assume-role-arn }}",
            },
          },
          {
            "if": "\${{ inputs.write-as-comment == true }} ",
            "name": "CDK Diff Comment",
            "uses": "corymhall/cdk-diff-action@v2",
            "with": {
              "cdkOutDir": "\${{ inputs.cloud-assembly-directory }}",
              "defaultStageDisplayName": "\`**\`",
              "failOnDestructiveChanges": false,
              "githubToken": "\${{ inputs.github-token }}",
              "stackSelectorPatterns": "\${{ inputs.stack-selector-patterns }}",
              "title": "\${{ inputs.comment-title }}",
            },
          },
          {
            "if": "\${{ inputs.write-as-comment == false }} ",
            "name": "CDK Diff Command",
            "run": "\${{ inputs.command }}",
            "shell": "bash",
          },
        ],
        "using": "composite",
      },
    },
  },
  "fileName": "actions/cdk-express-pipeline-diff/action.yml",
}
`;

exports[`CDK Express Pipeline CI Configuration snapshot all workflows for config 3`] = `
{
  "content": GithubWorkflow {
    "json": {
      "description": "Run CDK deploy for a specific stack pattern",
      "inputs": {
        "assume-region": {
          "description": "The AWS region to assume for the deploy operation",
          "required": true,
        },
        "assume-role-arn": {
          "description": "The ARN of the role to assume for the deploy operation",
          "required": true,
        },
        "cloud-assembly-directory": {
          "description": "The directory where the CDK cloud assembly is located",
          "required": true,
        },
        "command": {
          "description": "CDK deploy command",
          "required": true,
        },
        "stack-selector-patterns": {
          "description": "The value of the {stackSelector} replacement in the command",
          "required": true,
        },
      },
      "name": "CDK Deploy Action",
      "runs": {
        "steps": [
          {
            "name": "Restore Build Cache",
            "uses": "actions/cache/restore@v4",
            "with": {
              "key": "cache-build-\${{ github.sha }}",
              "path": "cdk.out/
node_modules/",
            },
          },
          {
            "name": "Configure AWS credentials",
            "uses": "aws-actions/configure-aws-credentials@v4",
            "with": {
              "aws-region": "\${{ inputs.assume-region }}",
              "role-to-assume": "\${{ inputs.assume-role-arn }}",
            },
          },
          {
            "name": "CDK Deploy Command",
            "run": "\${{ inputs.command }}",
            "shell": "bash",
          },
        ],
        "using": "composite",
      },
    },
  },
  "fileName": "actions/cdk-express-pipeline-deploy/action.yml",
}
`;

exports[`CDK Express Pipeline CI Configuration snapshot all workflows for config 4`] = `
{
  "content": GithubWorkflow {
    "json": {
      "jobs": {
        "build": {
          "name": "Build and Synth",
          "runs-on": "ubuntu-latest",
          "steps": [
            {
              "name": "Checkout repo",
              "uses": "actions/checkout@v4",
            },
            {
              "name": "Run CDK Express Pipeline Synth",
              "uses": "./.github/actions/cdk-express-pipeline-synth",
            },
          ],
        },
        "diff__dev": {
          "name": "Diff dev - \${{ matrix.name }}",
          "needs": [
            "build",
          ],
          "permissions": {
            "actions": "write",
            "contents": "write",
            "id-token": "write",
            "pull-requests": "write",
          },
          "runs-on": "ubuntu-latest",
          "steps": [
            {
              "name": "Checkout repo",
              "uses": "actions/checkout@v4",
            },
            {
              "name": "Run CDK Express Pipeline Synth",
              "uses": "./.github/actions/cdk-express-pipeline-diff",
              "with": {
                "assume-region": "\${{ matrix.assume-region }}",
                "assume-role-arn": "\${{ matrix.assume-role-arn }}",
                "cloud-assembly-directory": "\${{ matrix.cloud-assembly-directory }}",
                "command": "\${{ matrix.command }}",
                "comment-title": "CDK Diff: dev - \${{ matrix.name }}",
                "github-token": "\${{ secrets.GITHUB_TOKEN }}",
                "stack-selector-patterns": "\${{ matrix.stack-selector-patterns }}",
                "write-as-comment": "\${{ matrix.write-as-comment }}",
              },
            },
          ],
          "strategy": {
            "fail-fast": false,
            "matrix": {
              "include": [
                {
                  "assume-region": "us-east-1",
                  "assume-role-arn": "arn:aws:iam::581184285249:role/githuboidc-git-hub-deploy-role",
                  "cloud-assembly-directory": "cdk.out/dev",
                  "command": "npm run cdk -- diff global_* --app=cdk.out/dev",
                  "name": "global",
                  "stack-selector-patterns": "global_*",
                  "write-as-comment": true,
                },
                {
                  "assume-region": "us-east-1",
                  "assume-role-arn": "arn:aws:iam::581184285249:role/githuboidc-git-hub-deploy-role",
                  "cloud-assembly-directory": "cdk.out/dev",
                  "command": "npm run cdk -- diff app_* --app=cdk.out/dev",
                  "name": "app",
                  "stack-selector-patterns": "app_*",
                  "write-as-comment": true,
                },
              ],
            },
          },
        },
        "diff__prod": {
          "name": "Diff prod - \${{ matrix.name }}",
          "needs": [
            "build",
          ],
          "permissions": {
            "actions": "write",
            "contents": "write",
            "id-token": "write",
            "pull-requests": "write",
          },
          "runs-on": "ubuntu-latest",
          "steps": [
            {
              "name": "Checkout repo",
              "uses": "actions/checkout@v4",
            },
            {
              "name": "Run CDK Express Pipeline Synth",
              "uses": "./.github/actions/cdk-express-pipeline-diff",
              "with": {
                "assume-region": "\${{ matrix.assume-region }}",
                "assume-role-arn": "\${{ matrix.assume-role-arn }}",
                "cloud-assembly-directory": "\${{ matrix.cloud-assembly-directory }}",
                "command": "\${{ matrix.command }}",
                "comment-title": "CDK Diff: prod - \${{ matrix.name }}",
                "github-token": "\${{ secrets.GITHUB_TOKEN }}",
                "stack-selector-patterns": "\${{ matrix.stack-selector-patterns }}",
                "write-as-comment": "\${{ matrix.write-as-comment }}",
              },
            },
          ],
          "strategy": {
            "fail-fast": false,
            "matrix": {
              "include": [
                {
                  "assume-region": "us-east-1",
                  "assume-role-arn": "arn:aws:iam::581184285249:role/githuboidc-git-hub-deploy-role",
                  "cloud-assembly-directory": "cdk.out/prod",
                  "command": "npm run cdk -- diff global_* --app=cdk.out/prod",
                  "name": "global",
                  "stack-selector-patterns": "global_*",
                  "write-as-comment": true,
                },
                {
                  "assume-region": "us-east-1",
                  "assume-role-arn": "arn:aws:iam::581184285249:role/githuboidc-git-hub-deploy-role",
                  "cloud-assembly-directory": "cdk.out/prod",
                  "command": "npm run cdk -- diff app_* --app=cdk.out/prod",
                  "name": "app",
                  "stack-selector-patterns": "app_*",
                  "write-as-comment": true,
                },
              ],
            },
          },
        },
      },
      "name": "CDK Express Pipeline Diff",
      "on": {
        "pull_request": {
          "branches": [
            "main",
          ],
        },
      },
    },
  },
  "fileName": "workflows/cdk-express-pipeline-diff.yml",
}
`;

exports[`CDK Express Pipeline CI Configuration snapshot all workflows for config 5`] = `
{
  "content": GithubWorkflow {
    "json": {
      "concurrency": {
        "cancel-in-progress": false,
        "group": "cdk-express-pipeline-deploy-dev",
      },
      "jobs": {
        "build": {
          "name": "Build and Synth",
          "runs-on": "ubuntu-latest",
          "steps": [
            {
              "name": "Checkout repo",
              "uses": "actions/checkout@v4",
            },
            {
              "name": "Run CDK Express Pipeline Synth",
              "uses": "./.github/actions/cdk-express-pipeline-synth",
            },
          ],
        },
        "deploy__dev": {
          "name": "Deploy dev - \${{ matrix.name }}",
          "needs": [
            "build",
          ],
          "permissions": {
            "actions": "write",
            "contents": "write",
            "id-token": "write",
          },
          "runs-on": "ubuntu-latest",
          "steps": [
            {
              "name": "Checkout repo",
              "uses": "actions/checkout@v4",
            },
            {
              "name": "Run CDK Express Pipeline Synth",
              "uses": "./.github/actions/cdk-express-pipeline-deploy",
              "with": {
                "assume-region": "\${{ matrix.assume-region }}",
                "assume-role-arn": "\${{ matrix.assume-role-arn }}",
                "cloud-assembly-directory": "\${{ matrix.cloud-assembly-directory }}",
                "command": "\${{ matrix.command }}",
                "stack-selector-patterns": "\${{ matrix.stack-selector-patterns }}",
              },
            },
          ],
          "strategy": {
            "fail-fast": false,
            "matrix": {
              "include": [
                {
                  "assume-region": "us-east-1",
                  "assume-role-arn": "arn:aws:iam::581184285249:role/githuboidc-git-hub-deploy-role",
                  "cloud-assembly-directory": "cdk.out/dev",
                  "command": "npm run cdk -- deploy global_* --app=cdk.out/dev --concurrency 10 --require-approval never --exclusively",
                  "name": "global",
                  "stack-selector-patterns": "global_*",
                },
                {
                  "assume-region": "us-east-1",
                  "assume-role-arn": "arn:aws:iam::581184285249:role/githuboidc-git-hub-deploy-role",
                  "cloud-assembly-directory": "cdk.out/dev",
                  "command": "npm run cdk -- deploy app_* --app=cdk.out/dev --concurrency 10 --require-approval never --exclusively",
                  "name": "app",
                  "stack-selector-patterns": "app_*",
                },
              ],
            },
          },
        },
      },
      "name": "CDK Express Pipeline Deploy - Dev",
      "on": {
        "pull_request": {
          "branches": [
            "main",
          ],
        },
      },
    },
  },
  "fileName": "workflows/cdk-express-pipeline-deploy-dev.yml",
}
`;

exports[`CDK Express Pipeline CI Configuration snapshot all workflows for config 6`] = `
{
  "content": GithubWorkflow {
    "json": {
      "concurrency": {
        "cancel-in-progress": false,
        "group": "cdk-express-pipeline-deploy-prod",
      },
      "jobs": {
        "build": {
          "name": "Build and Synth",
          "runs-on": "ubuntu-latest",
          "steps": [
            {
              "name": "Checkout repo",
              "uses": "actions/checkout@v4",
            },
            {
              "name": "Run CDK Express Pipeline Synth",
              "uses": "./.github/actions/cdk-express-pipeline-synth",
            },
          ],
        },
        "deploy__prod": {
          "name": "Deploy prod - \${{ matrix.name }}",
          "needs": [
            "build",
          ],
          "permissions": {
            "actions": "write",
            "contents": "write",
            "id-token": "write",
          },
          "runs-on": "ubuntu-latest",
          "steps": [
            {
              "name": "Checkout repo",
              "uses": "actions/checkout@v4",
            },
            {
              "name": "Run CDK Express Pipeline Synth",
              "uses": "./.github/actions/cdk-express-pipeline-deploy",
              "with": {
                "assume-region": "\${{ matrix.assume-region }}",
                "assume-role-arn": "\${{ matrix.assume-role-arn }}",
                "cloud-assembly-directory": "\${{ matrix.cloud-assembly-directory }}",
                "command": "\${{ matrix.command }}",
                "stack-selector-patterns": "\${{ matrix.stack-selector-patterns }}",
              },
            },
          ],
          "strategy": {
            "fail-fast": false,
            "matrix": {
              "include": [
                {
                  "assume-region": "us-east-1",
                  "assume-role-arn": "arn:aws:iam::581184285249:role/githuboidc-git-hub-deploy-role",
                  "cloud-assembly-directory": "cdk.out/prod",
                  "command": "npm run cdk -- deploy global_* --app=cdk.out/prod --concurrency 10 --require-approval never --exclusively",
                  "name": "global",
                  "stack-selector-patterns": "global_*",
                },
                {
                  "assume-region": "us-east-1",
                  "assume-role-arn": "arn:aws:iam::581184285249:role/githuboidc-git-hub-deploy-role",
                  "cloud-assembly-directory": "cdk.out/prod",
                  "command": "npm run cdk -- deploy app_* --app=cdk.out/prod --concurrency 10 --require-approval never --exclusively",
                  "name": "app",
                  "stack-selector-patterns": "app_*",
                },
              ],
            },
          },
        },
      },
      "name": "CDK Express Pipeline Deploy - Prod",
      "on": {
        "pull_request": {
          "branches": [
            "production",
          ],
        },
      },
    },
  },
  "fileName": "workflows/cdk-express-pipeline-deploy-prod.yml",
}
`;

exports[`CDK Express Pipeline CI Configuration snapshot diff stack selector variants: stage 1`] = `
[
  {
    "assume-region": "",
    "assume-role-arn": "",
    "cloud-assembly-directory": "cdk.out/dev",
    "command": "npm run cdk -- diff global_us-east-1_* --app=cdk.out/dev",
    "name": "global__us_east_1",
    "stack-selector-patterns": "global_us-east-1_*",
    "write-as-comment": true,
  },
  {
    "assume-region": "",
    "assume-role-arn": "",
    "cloud-assembly-directory": "cdk.out/dev",
    "command": "npm run cdk -- diff app_us-east-1_* --app=cdk.out/dev",
    "name": "app__us_east_1",
    "stack-selector-patterns": "app_us-east-1_*",
    "write-as-comment": true,
  },
  {
    "assume-region": "",
    "assume-role-arn": "",
    "cloud-assembly-directory": "cdk.out/dev",
    "command": "npm run cdk -- diff app_eu-west-1_* --app=cdk.out/dev",
    "name": "app__eu_west_1",
    "stack-selector-patterns": "app_eu-west-1_*",
    "write-as-comment": true,
  },
]
`;

exports[`CDK Express Pipeline CI Configuration snapshot diff stack selector variants: wave 1`] = `
[
  {
    "assume-region": "",
    "assume-role-arn": "",
    "cloud-assembly-directory": "cdk.out/dev",
    "command": "npm run cdk -- diff global_* --app=cdk.out/dev",
    "name": "global",
    "stack-selector-patterns": "global_*",
    "write-as-comment": true,
  },
  {
    "assume-region": "",
    "assume-role-arn": "",
    "cloud-assembly-directory": "cdk.out/dev",
    "command": "npm run cdk -- diff app_* --app=cdk.out/dev",
    "name": "app",
    "stack-selector-patterns": "app_*",
    "write-as-comment": true,
  },
]
`;

exports[`CDK Express Pipeline CI Configuration snapshot synth and build variants: preset-npm 1`] = `
{
  "content": GithubWorkflow {
    "json": {
      "name": "CDK Express Pipeline Synth Action",
      "runs": {
        "steps": [
          {
            "name": "Checkout repo",
            "uses": "actions/checkout@v4",
          },
          {
            "name": "Set up node",
            "uses": "actions/setup-node@v4",
            "with": {
              "cache": "npm",
              "node-version": 20,
            },
          },
          {
            "name": "Install dependencies",
            "run": "npm ci",
            "shell": "bash",
          },
          {
            "name": "CDK synth dev",
            "run": "",
            "shell": "bash",
          },
          {
            "name": "CDK synth prod",
            "run": "",
            "shell": "bash",
          },
          {
            "name": "Cache Build",
            "uses": "actions/cache/save@v4",
            "with": {
              "key": "cache-build-\${{ github.sha }}",
              "path": "cdk.out/
node_modules/",
            },
          },
        ],
        "using": "composite",
      },
    },
  },
  "fileName": "actions/cdk-express-pipeline-synth/action.yml",
}
`;

exports[`CDK Express Pipeline CI Configuration snapshot synth and build variants: workflow 1`] = `
{
  "content": GithubWorkflow {
    "json": {
      "name": "CDK Express Pipeline Synth Action",
      "runs": {
        "steps": [
          {
            "name": "Checkout repo",
            "uses": "actions/checkout@v4",
          },
          {
            "name": "Build workflow",
            "uses": ".github/actions/build",
          },
          {
            "name": "CDK synth dev",
            "run": "",
            "shell": "bash",
          },
          {
            "name": "CDK synth prod",
            "run": "",
            "shell": "bash",
          },
          {
            "name": "Cache Build",
            "uses": "actions/cache/save@v4",
            "with": {
              "key": "cache-build-\${{ github.sha }}",
              "path": "cdk.out/
node_modules/",
            },
          },
        ],
        "using": "composite",
      },
    },
  },
  "fileName": "actions/cdk-express-pipeline-synth/action.yml",
}
`;
